# Test-project

./: .gitmodules  AppSettings.cpp  AppSettings.h  CMakeLists.txt  README.md  SignalFilter.cpp  SignalFilter.h  SignalGenerator.cpp  SignalGenerator.h  Utilities.cpp  Utilities.h  main.cpp  settings.json
test_results/: README.md  in.csv  out.csv  result.xlsx  settings.json
